--- a/session04/example/sample/package.json
+++ b/session04/example/sample/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "http": "0.0.1-security"
+    "http": "0.0.1-security",
+    "node-vault": "^0.9.21"
   }
 }
