--- a/session04/example/sample/package.json
+++ b/session04/example/sample/package.json
@@ -18,7 +18,7 @@
     "pkg": "^4.4.9"
   },
   "dependencies": {
-    "http": "0.0.1-security",
-    "node-vault": "^0.9.21"
+    "hashi-vault-js": "^0.4.5",
+    "http": "0.0.1-security"
   }
 }
