--- a/session04/example/sample/package.json
+++ b/session04/example/sample/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "hashi-vault-js": "^0.4.5",
-    "http": "0.0.1-security"
+    "http": "0.0.1-security",
+    "ip": "^1.1.5"
   }
 }
