--- a/session06/example/do_docker/Dockerfile
+++ b/session06/example/do_docker/Dockerfile
@@ -3,7 +3,7 @@
 FROM openjdk:11
 VOLUME /tmp
 
-ARG JAR_FILE=../sample_java/target/waypoint-0.0.1-SNAPSHOT.jar
+ARG JAR_FILE="waypoint-0.0.1-SNAPSHOT.jar"
 COPY ${JAR_FILE} app.jar
 
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
